samples/shrubbery/examples/failing/blockWithSemisAndAlternatives.shrub
hello:
  in english; semicolons are used
  | world
  | universe
